# VNMark

./: HUONG-DAN-GITHUB-RELEASE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy-gh-pages.yml  release.yml
src/: App.jsx  ManChanLoi.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DanhSachLenhNhanh.jsx  MenuNoi.jsx  ModalGioiThieu.jsx  ModalQuanLyMau.jsx  PhieuFrontMatter.jsx  ThanhCongCuDinhDang.jsx  VungSoanThao.jsx
src/tien-ich/: anhTuyChinh.js  boDauTiengViet.js  cauNoiTauri.js  chuyenDoiMarkdown.js  lenhNhanh.js  mauMacDinh.js  phimTatTuyChinh.js  taoYaml.js  thongTinUngDung.js
