[package]
name = "vnmark"
version = "0.1.0"
description = "VNMark — Trình soạn thảo văn bản Markdown dành cho người VIỆT NAM. Soạn thảo WYSIWYG xuất ra Markdown + Front Matter YAML."
authors = ["Bùi Trung Tín"]
edition = "2021"

[lib]
name = "vnmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
